--- a/incubator/busbar/templates/kubeconfig-deployment.yaml
+++ b/incubator/busbar/templates/kubeconfig-deployment.yaml
@@ -3,16 +3,19 @@ apiVersion: apps/v1beta1
 metadata:
   name: {{ template "kubeConfig.fullname" . }}
   labels:
-    app: {{ template "kubeConfig.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: {{ template "busbar.name" . }}
+    component: {{ template "kubeConfig.fullname" . }}
     release: "{{ .Release.Name }}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: {{ template "kubeConfig.fullname" . }}
+        app: {{ template "busbar.name" . }}
+        component: {{ template "kubeConfig.fullname" . }}
+        release: "{{ .Release.Name }}"
     spec:
       containers:
       - name: {{ template "kubeConfig.fullname" . }}
