--- a/incubator/busbar/templates/kubeconfig-service.yaml
+++ b/incubator/busbar/templates/kubeconfig-service.yaml
@@ -3,15 +3,17 @@ kind: Service
 metadata:
   name: {{ template "kubeConfig.fullname" . }}
   labels:
-    app: {{ template "kubeConfig.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: {{ template "busbar.name" . }}
+    component: {{ template "kubeConfig.fullname" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
 spec:
   selector:
-    name: {{ template "kubeConfig.fullname" . }}
+    app: {{ template "busbar.name" . }}
+    component: {{ template "kubeConfig.fullname" . }}
+    release: "{{ .Release.Name }}"
   type: LoadBalancer
   ports:
   - name: kubeconfig
