--- a/stable/kong/templates/service-kong-admin.yaml
+++ b/stable/kong/templates/service-kong-admin.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kong.fullname" . }}-admin
+  name: {{ template "kong.name" . }}-admin
 spec:
   type: {{ .Values.admin.type }}
   {{- if and (eq .Values.admin.type "LoadBalancer") .Values.admin.loadBalancerIP }}
@@ -10,14 +10,15 @@ spec:
   ports:
   {{- if .Values.admin.useTLS }}
   - name: kong-admin-ssl
-    port: {{ default 8444 .Values.admin.serviceSSLPort }}
-    targetPort: {{ default 8444 .Values.admin.containerSSLPort }}
+    port: {{ .Values.admin.serviceSSLPort }}
+    targetPort: {{ .Values.admin.containerSSLPort }}
     protocol: TCP
   {{- else }}
   - name: kong-admin
-    port: {{ default 8001 .Values.admin.servicePort }}
-    targetPort: {{ default 8001 .Values.admin.containerPort }}
+    port: {{ .Values.admin.servicePort }}
+    targetPort: {{ .Values.admin.containerPort }}
     protocol: TCP
   {{- end }}
   selector:
-    app: {{ template "kong.fullname" . }}
+    app: {{ template "kong.name" . }}
+    release: {{ .Release.Name }}
