--- a/stable/kong/templates/service-kong-proxy.yaml
+++ b/stable/kong/templates/service-kong-proxy.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kong.fullname" . }}-proxy
+  name: {{ template "kong.name" . }}-proxy
 spec:
   type: {{ .Values.proxy.type }}
   {{- if and (eq .Values.proxy.type "LoadBalancer") .Values.proxy.loadBalancerIP }}
@@ -11,13 +11,14 @@ spec:
   {{- if .Values.proxy.useTLS }}
   - name: kong-proxy-ssl
     port: {{ default 8443 .Values.proxy.serviceSSLPort }}
-    targetPort: {{ default 8443 .Values.proxy.containerSSLPort }}
+    targetPort: {{ .Values.proxy.containerSSLPort }}
     protocol: TCP
   {{ else }}
   - name: kong-proxy
-    port: {{ default 8000 .Values.proxy.servicePort }}
-    targetPort: {{ default 8000 .Values.proxy.containerPort }}
+    port: {{ .Values.proxy.servicePort }}
+    targetPort: {{ .Values.proxy.containerPort }}
     protocol: TCP
   {{ end }}
   selector:
-    app: {{ template "kong.fullname" . }}
+    app: {{ template "kong.name" . }}
+    release: {{ .Release.Name }}
