--- a/stable/kong/values.yaml
+++ b/stable/kong/values.yaml
@@ -2,48 +2,47 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repo: kong
+  repository: kong
   tag: 0.11.2
   pullPolicy: IfNotPresent
+
+# Kong admin and proxy service configs
 admin:
-  servicePort: 8001
+  # HTTPS traffic on the admin port
+  useTLS: true
+  # Kong admin external SSL port
   serviceSSLPort: 8444
-  containerPort: 8001
+  # Kong admin internal SSL port
   containerSSLPort: 8444
+  # Kong admin service type
   type: NodePort
-  loadBalancerIP: null
-  useTLS: true
 proxy:
-  servicePort: 8000
-  serviceSSLPort: 8443
-  containerPort: 8000
-  containerSSLPort: 8443
-  type: NodePort
-  loadBalancerIP: null
+  # HTTPS traffic on the proxy port
   useTLS: true
-logLevel: debug
-database:
-  type: postgres
-  postgres:
-    username: kong
-    database: kong
-    password: kong
-    host: postgres
-    port: 5432
-  cassandra:
-    contactPoints: cassandra
-    port: 9042
-    keyspace: kong
-    replication: 2
+  # Kong proxy external SSL port
+  serviceSSLPort: 8443
+  # Kong proxy internal SSL port
+  containerSSLPort: 8443
+  # Kong proxy service type
+  type: NodePort
+
+
+# set it to run Kong migrations
 runMigrations: true
-customConfig:
-  # If you want to specify additional Kong configurations, you can define them
-  # in here as yaml list.
-  # Kong configurations guide https://getkong.org/docs/latest/configuration/
-  nginx_worker_processes: auto
+
+# If you want to specify additional Kong configurations, you can define them
+# in here as yaml list.
+# Kong configurations guide https://getkong.org/docs/latest/configuration/
+env:
+  database: postgres
+  pg_password: kong
+  pg_host: postgres
+  pg_port: 5432
+
+
+# If you want to specify resources, uncomment the following
+# lines, adjust them as necessary, and remove the curly braces after 'resources:'.
 resources: {}
-  # If you want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #  cpu: 100m
   #  memory: 128Mi
@@ -51,6 +50,7 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
+# readinessProbe for Kong pods
 readinessProbe:
   httpGet:
     path: "/status"
@@ -61,6 +61,8 @@ readinessProbe:
   periodSeconds: 30
   successThreshold: 1
   failureThreshold: 5
+
+# livenessProbe for Kong pods
 livenessProbe:
   httpGet:
     path: "/status"
@@ -71,6 +73,7 @@ livenessProbe:
   periodSeconds: 30
   successThreshold: 1
   failureThreshold: 5
+
 # Affinity for pod assignment
 # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
 # affinity: {}
@@ -83,12 +86,24 @@ tolerations: []
 # Ref: https://kubernetes.io/docs/user-guide/node-selection/
 nodeSelector: {}
 
+# Annotation to be added to Kong pods
 podAnnotations: {}
+
+# Kong pod count
 replicaCount: 1
 
-# Cassandra sub chart is fetched from
-# https://github.com/kubernetes/charts/tree/master/incubator/cassandra
 
+# Kong has a choice of either Postgres or Cassandra as a backend datatstore.
+# This chart allows you to choose either of them with the `database.type`
+# parameter.  Postgres is chosen by default.
+
+# Additionally, this chart allows you to use your own database or spin up a new
+# instance by using the `postgres.enabled` or `cassandra.enabled` parameters.
+# Enabling both will create both databases in your cluster, but only one
+# will be used by Kong based on the `env.database` parameter.
+# Postgres is enabled by default.
+
+# Cassandra chart configs
 cassandra:
   enabled: false
   ## Cassandra image version
@@ -149,8 +164,7 @@ cassandra:
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
   podLabels: {}
 
-# PostgreSQL sub chart is fetched from
-# https://github.com/kubernetes/charts/tree/master/stable/postgresql
+# PostgreSQL chart configs
 postgresql:
   enabled: true
   image: "postgres"
