Use auto discovery for finding the alertmanager.
Add instructions for upgrading from previous chart versions.

Removed Values.alertmanagerHostname. If using an external alertmanager
you can set the host in prometheus.yml

--- a/stable/prometheus/templates/server-configmap.yaml
+++ b/stable/prometheus/templates/server-configmap.yaml
@@ -10,19 +10,32 @@ metadata:
     release: {{ .Release.Name }}
   name: {{ template "prometheus.server.fullname" . }}
 data:
-{{- $alertmanagerHostname := include "prometheus.alertmanager.hostname" . -}}
 {{- $root := . -}}
 {{- range $key, $value := .Values.serverFiles }}
   {{ $key }}: |
 {{ toYaml $value | default "{}" | indent 4 }}
 {{- if eq $key "prometheus.yml" -}}
-{{- if $alertmanagerHostname -}}
+{{- if $root.Values.alertmanager.enabled -}}
     alerting:
       alertmanagers:
-      - path_prefix: {{ $root.Values.alertmanager.baseURL }}
-        static_configs:
-        - targets:
-          - {{ $alertmanagerHostname }}
+      - kubernetes_sd_configs:
+          - role: pod
+        tls_config:
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        relabel_configs:
+        - source_labels: [__meta_kubernetes_namespace]
+          regex: {{ $root.Release.Namespace }} ## maybe not works in configmap, you need assigned to 1 variable first.
+          action: keep
+        - source_labels: [__meta_kubernetes_pod_label_app]
+          regex: prometheus
+          action: keep
+        - source_labels: [__meta_kubernetes_pod_label_component]
+          regex: alertmanager
+          action: keep
+        - source_labels: [__meta_kubernetes_pod_container_port_number]
+          regex:
+          action: drop
 {{- end -}}
 {{- end -}}
 {{- end -}}
