--- a/stable/kong/templates/service-kong-admin.yaml
+++ b/stable/kong/templates/service-kong-admin.yaml
@@ -1,24 +1,26 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kong.name" . }}-admin
+  name: {{ template "kong.fullname" . }}-admin
 spec:
   type: {{ .Values.admin.type }}
   {{- if and (eq .Values.admin.type "LoadBalancer") .Values.admin.loadBalancerIP }}
   loadBalancerIP: {{ .Values.admin.loadBalancerIP }}
   {{- end }}
   ports:
-  {{- if .Values.admin.useTLS }}
-  - name: kong-admin-ssl
-    port: {{ .Values.admin.serviceSSLPort }}
-    targetPort: {{ .Values.admin.containerSSLPort }}
-    protocol: TCP
-  {{- else }}
   - name: kong-admin
-    port: {{ .Values.admin.servicePort }}
-    targetPort: {{ .Values.admin.containerPort }}
     protocol: TCP
+  {{- if .Values.admin.https }}
+    port: {{ .Values.admin.https.servicePort }}
+    targetPort: {{ .Values.admin.https.containerPort }}
+  {{- else }}
+    port: {{ .Values.admin.http.servicePort }}
+    targetPort: {{ .Values.admin.http.containerPort }}
   {{- end }}
+  {{- if (and (eq .Values.admin.type "NodePort") (not (empty .Values.admin.nodePort))) }}
+    nodePort: {{ .Values.admin.nodePort }}
+  {{- end }}
+  protocol: TCP
   selector:
     app: {{ template "kong.name" . }}
     release: {{ .Release.Name }}
