--- a/incubator/chartmuseum/templates/deployment.yaml
+++ b/incubator/chartmuseum/templates/deployment.yaml
@@ -46,12 +46,14 @@ spec:
         ports:
         - containerPort: {{ .Values.service.internalPort }}
         livenessProbe:
-          tcpSocket:
+          httpGet:
+            path: /health
             port: {{ .Values.service.internalPort }}
           initialDelaySeconds: 5
           periodSeconds: 10
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: /health
             port: {{ .Values.service.internalPort }}
           initialDelaySeconds: 5
           periodSeconds: 10
