--- a/incubator/chartmuseum/values.yaml
+++ b/incubator/chartmuseum/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: chartmuseum/chartmuseum
-  tag: v0.2.6
+  tag: v0.2.7
   pullPolicy: IfNotPresent
 env:
   open:
@@ -34,7 +34,7 @@ env:
     # allow chart versions to be re-uploaded
     ALLOW_OVERWRITE: false
     # absolute url for .tgzs in index.yaml
-    CHART_URL: http://localhost
+    CHART_URL:
   secret:
     # username for basic http authentication
     BASIC_AUTH_USER:
@@ -51,7 +51,7 @@ replica:
   #   iam.amazonaws.com/role: role-arn
 service:
   type: ClusterIP
-  externalPort: 80
+  externalPort: 8080
   internalPort: 8080
 resources:
   limits:
