--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -8,6 +8,10 @@ controller:
     tag: "0.9.0-beta.15"
     pullPolicy: IfNotPresent
 
+  # Antiaffinity for controller pod assignment
+  # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+  antiAffinity: ""
+
   config: {}
   # Will add custom header to Nginx https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/customization/custom-headers
   headers: {}
@@ -179,6 +183,10 @@ defaultBackend:
     repository: gcr.io/google_containers/defaultbackend
     tag: "1.3"
     pullPolicy: IfNotPresent
+
+  # Antiaffinity for default backend pod assignment
+  # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+  antiAffinity: ""
 
   extraArgs: {}
 
