Several improvements for the kubeless helm chart

--- a/incubator/kubeless/templates/cluster-role.yaml
+++ b/incubator/kubeless/templates/cluster-role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: kubeless-controller-deployer
+  name: {{ template "fullname" . }}-controller-deployer
   labels:
 {{ include "labels.standard" . | indent 4 }}
 rules:
