--- a/incubator/kubeless/templates/service-account.yaml
+++ b/incubator/kubeless/templates/service-account.yaml
@@ -2,9 +2,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: controller-acct
-  namespace: kubeless
+  name: {{ template "fullname" . }}-controller-account
+  #name: controller-account
   labels:
 {{ include "labels.standard" . | indent 4 }}
-  namespace: kubeless
 {{- end }}
