--- a/incubator/kubeless/templates/kafka-headless-svc.yaml
+++ b/incubator/kubeless/templates/kafka-headless-svc.yaml
@@ -2,8 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: broker
-  namespace: kubeless
+  name: {{ template "fullname" . }}-broker
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -12,3 +11,5 @@ spec:
   clusterIP: None
   selector:
     kubeless: kafka
+    app: {{ template "fullname"  . }}
+    release: {{ .Release.Name | quote }}
