--- a/incubator/kubeless/templates/kafka-stateful.yaml
+++ b/incubator/kubeless/templates/kafka-stateful.yaml
@@ -2,16 +2,17 @@ apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
   name: {{ template "fullname" . }}-kafka
-  namespace: kubeless
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
-  serviceName: "broker"
+  serviceName: "{{ template "fullname" . }}-broker"
   replicas: {{ .Values.kafka.statefulSet.replicaCount }}
   template:
     metadata:
       labels:
         kubeless: kafka
+        app: {{ template "fullname"  . }}
+        release: {{ .Release.Name | quote }}
     spec:
       terminationGracePeriodSeconds: 10
       initContainers:
@@ -30,13 +31,13 @@ spec:
 {{ toYaml .Values.kafka.resources | indent 10 }}
         env:
         - name: KAFKA_ADVERTISED_HOST_NAME
-          value: broker.kubeless
+          value: broker.{{ .Release.Namespace }}
         - name: KAFKA_ADVERTISED_PORT
           value: "9092"
         - name: KAFKA_PORT
           value: "9092"
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value: zookeeper.kubeless:2181
+          value: {{ template "fullname" . }}-zookeeper.{{ .Release.Namespace }}:2181
         - name: ALLOW_PLAINTEXT_LISTENER
           value: "yes"
         ports:
