--- a/incubator/kubeless/templates/kafka-svc.yaml
+++ b/incubator/kubeless/templates/kafka-svc.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka
-  namespace: kubeless
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -12,3 +11,5 @@ spec:
     targetPort: kafka-port
   selector:
     kubeless: kafka
+    app: {{ template "fullname"  . }}
+    release: {{ .Release.Name | quote }}
