--- a/incubator/kubeless/templates/zk-headless-svc.yaml
+++ b/incubator/kubeless/templates/zk-headless-svc.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zoo
-  namespace: kubeless
+  name: {{ template "fullname" . }}-zoo
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -14,3 +13,5 @@ spec:
   clusterIP: None
   selector:
     kubeless: zookeeper
+    app: {{ template "fullname"  . }}
+    release: {{ .Release.Name | quote }}
