--- a/incubator/kubeless/templates/zk-stateful.yaml
+++ b/incubator/kubeless/templates/zk-stateful.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
   name: {{ template "fullname" . }}-zoo
-  namespace: kubeless
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -12,6 +11,8 @@ spec:
     metadata:
       labels:
         kubeless: zookeeper
+        app: {{ template "fullname"  . }}
+        release: {{ .Release.Name | quote }}
     spec:
       terminationGracePeriodSeconds: 10
       initContainers:
