--- a/incubator/kubeless/templates/zk-svc.yaml
+++ b/incubator/kubeless/templates/zk-svc.yaml
@@ -2,8 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zookeeper
-  namespace: kubeless
+  name: {{ template "fullname" . }}-zookeeper
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -12,3 +11,5 @@ spec:
     name: client
   selector:
     kubeless: zookeeper
+    app: {{ template "fullname"  . }}
+    release: {{ .Release.Name | quote }}
