--- a/incubator/jaeger/templates/collector-svc.yaml
+++ b/incubator/jaeger/templates/collector-svc.yaml
@@ -18,15 +18,15 @@ spec:
   - name: jaeger-collector-tchannel
     port: {{ .Values.collector.service.tchannelPort }}
     protocol: TCP
-    targetPort: {{ .Values.collector.service.tchannelPort }}
+    targetPort: 14267
   - name: jaeger-collector-http
     port: {{ .Values.collector.service.httpPort }}
     protocol: TCP
-    targetPort: {{ .Values.collector.service.httpPort }}
+    targetPort: 14268
   - name: jaeger-collector-zipkin
     port: {{ .Values.collector.service.zipkinPort }}
     protocol: TCP
-    targetPort: {{ .Values.collector.service.zipkinPort }}
+    targetPort: 9411
   selector:
     app: "{{ template "jaeger.name" . }}"
     component: "collector"
