Improve CockroachDB's PodDisruptionBudget
Letting only 1 go down is much safer and more accurately reflects the
desire of operators than allowing up to 33% to go down. It's
unfortunate that this bumps the minimum version by so much, but 1.7 is a
full two releases ago.

--- a/stable/cockroachdb/templates/cockroachdb-statefulset.yaml
+++ b/stable/cockroachdb/templates/cockroachdb-statefulset.yaml
@@ -73,7 +73,7 @@ spec:
   selector:
     matchLabels:
       component: "{{ .Release.Name }}-{{ .Values.Component }}"
-  minAvailable: {{ .Values.MinAvailable }}
+  maxUnavailable: {{ .Values.MaxUnavailable }}
 ---
 apiVersion: apps/v1beta1
 kind: StatefulSet
