--- a/stable/sumologic-fluentd/templates/daemonset.yaml
+++ b/stable/sumologic-fluentd/templates/daemonset.yaml
@@ -86,7 +86,7 @@ spec:
             - name: LOG_FORMAT
               value: {{ quote .Values.sumologic.logFormat }}
             {{- end }}
-            {{- if .Values.sumologic.kubernetesMeta }}
+            {{- if quote .Values.sumologic.kubernetesMeta }}
             - name: KUBERNETES_META
               value: {{ quote .Values.sumologic.kubernetesMeta }}
             {{- end }}
@@ -126,7 +126,7 @@ spec:
             - name: FLUENTD_OPT
               value: {{ quote .Values.sumologic.fluentdOpt }}
             {{- end }}
-            {{- if .Values.sumologic.verifySsl }}
+            {{- if quote .Values.sumologic.verifySsl }}
             - name: VERIFY_SSL
               value: {{ quote .Values.sumologic.verifySsl }}
             {{- end }}
@@ -134,7 +134,7 @@ spec:
             - name: MULTILINE_START_REGEXP
               value: {{ quote .Values.sumologic.multilineStartRegexp }}
             {{- end }}
-            {{- if .Values.sumologic.readFromHead }}
+            {{- if quote .Values.sumologic.readFromHead }}
             - name: READ_FROM_HEAD
               value: {{ quote .Values.sumologic.readFromHead }}
             {{- end }}
