add printtoconsole=1 to default params bitcoind config

--- a/incubator/bitcoind/values.yaml
+++ b/incubator/bitcoind/values.yaml
@@ -34,5 +34,6 @@ resources: {}
 configurationFiles:
   bitcoin.conf: |-
     server=1
+    printtoconsole=1
     rpcuser=rpcuser
     rpcpassword=rpcpassword
