--- a/incubator/gocd/templates/test-config.yaml
+++ b/incubator/gocd/templates/test-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ template "gocd.fullname" . }}-tests"
+  name: {{ template "gocd.fullname" . }}-tests
   labels:
     app: {{ template "gocd.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -13,10 +13,10 @@ data:
       {{- if .Values.agent.goServerUrl }}
         curl --connect-timeout 10 --retry 12 --retry-delay 10 --retry-max-time {{ .Values.server.healthCheck.initialDelaySeconds }} {{ .Values.agent.goServerUrl }}/auth/login
       {{- else }}
-        curl --connect-timeout 10 --retry 12 --retry-delay 10 --retry-max-time {{ .Values.server.healthCheck.initialDelaySeconds }} "http://{{ template "gocd.name" . }}-server-service:{{ .Values.server.service.httpPort }}/go/auth/login"
+        curl --connect-timeout 10 --retry 12 --retry-delay 10 --retry-max-time {{ .Values.server.healthCheck.initialDelaySeconds }} "http://{{ template "gocd.fullname" . }}-server:{{ .Values.server.service.httpPort }}/go/auth/login"
       {{- end }}
     }
 
     @test "Testing GoCD application is accessible through service" {
-      curl --retry 2 --retry-delay 10 --retry-max-time {{ .Values.server.healthCheck.initialDelaySeconds }} http://{{ template "gocd.name" . }}-server-service:{{ .Values.server.service.httpPort }}/go
+      curl --retry 2 --retry-delay 10 --retry-max-time {{ .Values.server.healthCheck.initialDelaySeconds }} http://{{ template "gocd.fullname" . }}-server:{{ .Values.server.service.httpPort }}/go
     }
