--- a/incubator/busbar/templates/busbar-web-deployment.yaml
+++ b/incubator/busbar/templates/busbar-web-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: {{ template "busbar.fullname" . }}-web
-        image: {{ .Values.image.busbar.repository }}/{{ .Values.image.busbar.name }}:{{ .Values.image.busbar.tag }}
+        image: {{ .Values.image.busbar.repository }}:{{ .Values.image.busbar.tag }}
         imagePullPolicy: {{ .Values.image.busbar.pullPolicy }}
         command:
         - /bin/sh
