Change maintainers list to contain Github usernames of individuals instead company name

--- a/incubator/gocd/Chart.yaml
+++ b/incubator/gocd/Chart.yaml
@@ -16,5 +16,9 @@ keywords:
 sources:
 - https://github.com/gocd/gocd
 maintainers:
-- name: ThoughtWorks, Inc.
-  email: godev+k8s@thoughtworks.com
+- name: arvindsv
+  email: arvind@thoughtworks.com
+- name: GaneshSPatil
+  email: ganeshpl@thoughtworks.com
+- name: varshavaradarajan
+  email: varshavs@thoughtworks.com
