--- a/stable/traefik/templates/deployment.yaml
+++ b/stable/traefik/templates/deployment.yaml
@@ -74,16 +74,25 @@ spec:
         ports:
         - name: http
           containerPort: 80
+          {{- if .Values.deployment.hostPort.httpEnabled }}
+          hostPort: 80
+          {{- end }}
           protocol: TCP
         - name: httpn
           containerPort: 8880
           protocol: TCP
         - name: https
           containerPort: 443
+          {{- if .Values.deployment.hostPort.httpsEnabled }}
+          hostPort: 443
+          {{- end }}
           protocol: TCP
         {{- if .Values.dashboard.enabled }}
         - name: dash
           containerPort: 8080
+          {{- if .Values.deployment.hostPort.dashboardEnabled }}
+          hostPort: 8080
+          {{- end }}
           protocol: TCP
         {{- end }}
         args:
