--- a/incubator/gocd/templates/gocd-agent-homego-pvc.yaml
+++ b/incubator/gocd/templates/gocd-agent-homego-pvc.yaml
@@ -4,11 +4,11 @@ apiVersion: v1
 metadata:
   name: {{ template "gocd.fullname" . }}-agent
   labels:
-    app: {{ .Values.agent.name }}
+    app: {{ template "gocd.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    component: {{ template "gocd.name" . }}-agent
+    component: agent
 spec:
   accessModes:
     - {{ .Values.agent.persistence.accessMode | quote }}
