--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    component: {{ template "gocd.name" . }}-server
+    component: server
 spec:
   {{- if le .Values.server.replicaCount 1.0 }}
   replicas: {{ .Values.server.replicaCount }}
@@ -17,7 +17,7 @@ spec:
       labels:
         app: {{ template "gocd.name" . }}
         release: {{ .Release.Name | quote }}
-        component: {{ template "gocd.name" . }}-server
+        component: server
     spec:
       {{- if .Values.server.persistence.enabled }}
       volumes:
@@ -30,7 +30,7 @@ spec:
           {{- if .Values.server.image.tag }}
           image: "{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}"
           {{- else }}
-          image: "{{ .Values.server.image.repository }}:v{{ default .Chart.AppVersion .Values.app.version }}"
+          image: "{{ .Values.server.image.repository }}:v{{ .Chart.AppVersion }}"
           {{- end }}
           imagePullPolicy: {{ .Values.server.image.pullPolicy }}
           env:
