--- a/incubator/gocd/templates/gocd-server-pvc.yaml
+++ b/incubator/gocd/templates/gocd-server-pvc.yaml
@@ -8,7 +8,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    component: {{ template "gocd.name" . }}-server
+    component: server
 spec:
   accessModes:
     - {{ .Values.server.persistence.accessMode | quote }}
