--- a/incubator/gocd/templates/ingress.yaml
+++ b/incubator/gocd/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    component: {{ template "gocd.name" . }}-server
+    component: server
   annotations:
     {{- range $key, $value := .Values.server.ingress.annotations }}
       {{ $key }}: {{ $value | quote }}
