configuration for nodeSelector increase version (#3136)

--- a/stable/sonatype-nexus/values.yaml
+++ b/stable/sonatype-nexus/values.yaml
@@ -5,6 +5,11 @@ replicaCount: 1
 image:
   repository: clearent/nexus
   tag: 3.5.1-02
+
+# node labels for node selection
+# nodeSelector:
+#   cloud.google.com/gke-nodepool: default-pool
+
 service:
   name: nexus
   type: LoadBalancer
