--- a/stable/nuclio/Chart.yaml
+++ b/stable/nuclio/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-description: A Helm chart for installing nuclio
+description: Serverless for Real-Time and Data-Driven Applications
 name: nuclio
-version: 0.1.2
+version: 0.1.3
 appVersion: 0.2.1
 icon: https://github.com/nuclio/nuclio/raw/master/docs/assets/images/logo.png
 home: https://nuclio.io
 sources:
   - https://github.com/nuclio/nuclio
 maintainers:
-  - name: Eliran Bivas
+  - name: bivas
     email: eliranb@iguazio.com
