Fix image for daemonset
Add config to log to Logstash
Rename variables for use with ES or Logstash
Add extra vartiables for ES and logstash

--- a/incubator/filebeat/templates/clusterrolebinding.yaml
+++ b/incubator/filebeat/templates/clusterrolebinding.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
+    k8s-app: filebeat
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
