# Description: Figuring out how to use CustomConfigMap was confusing to me. To be fair - I'm new to helm and amature at kubernetes. I figured others would benefit from being a bit more explicit about how to use this feature of the jenkins chart. For instance, I only figured out the issue with the ConfigMap name after searching the helm channel in k8s slack. Additionally I was frustrated (when using CustomConfigMap/parent chart setup) that my value changes that resulted in changes to the parent charts templates/config.yaml (the config map template) didn't result in the jenkins master pod being re-created, many of the value changes wolud ever go live even after running `helm update` with a myriad of options like `--recreate-pods`, `--reset-values`. etc etc. As such this change includes a modified deployment yaml that will result in the pod always being recreated on `helm update` when CustomConfigMap is true. Certainly not ideal - but in my opinion a better experience. please do let me know if I'm off the mark and there is a better way to achieve this. I'd love for this to get merged in so that I can use the parent chart / CustomConfigMap setup rather than maintaining a long lived fork of this chart.

--- a/stable/jenkins/templates/jenkins-master-deployment.yaml
+++ b/stable/jenkins/templates/jenkins-master-deployment.yaml
@@ -24,6 +24,9 @@ spec:
         component: "{{ .Release.Name }}-{{ .Values.Master.Component }}"
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
+        {{ if .Values.Master.CustomConfigMap }}
+        helm/revision: "{{ .Release.Revision }}"
+        {{ end }}
     spec:
       {{- if .Values.Master.NodeSelector }}
       nodeSelector:
