image and tag configurable, use automated build etcd image

--- a/incubator/etcd/values.yaml
+++ b/incubator/etcd/values.yaml
@@ -14,6 +14,8 @@ PeerTLS: true
 # While larger cluster provides better fault tolerance the write performance reduces since data needs to
 # be replicated to more machines.
 Replicas: 3
+Image: "nearform/etcd"
+ImageTag: "3.2.11"
 ImagePullPolicy: "Always"
 Cpu: "100m"
 Memory: "512Mi"
