Update app selectors and other minor fixes

--- a/incubator/kubeless/templates/controller-deployment.yaml
+++ b/incubator/kubeless/templates/controller-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     metadata:
       labels:
         kubeless: controller
-        app: {{ template "fullname"  . }}
+        app: {{ template "name"  . }}
         release: {{ .Release.Name }}
     spec:
       containers:
