--- a/incubator/kubeless/templates/kafka-stateful.yaml
+++ b/incubator/kubeless/templates/kafka-stateful.yaml
@@ -11,7 +11,7 @@ spec:
     metadata:
       labels:
         kubeless: kafka
-        app: {{ template "fullname"  . }}
+        app: {{ template "name"  . }}
         release: {{ .Release.Name | quote }}
     spec:
       terminationGracePeriodSeconds: 10
@@ -37,7 +37,7 @@ spec:
         - name: KAFKA_PORT
           value: "9092"
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value: {{ template "fullname" . }}-zookeeper.{{ .Release.Namespace }}:2181
+          value: zookeeper.{{ .Release.Namespace }}:2181
         - name: ALLOW_PLAINTEXT_LISTENER
           value: "yes"
         ports:
