--- a/incubator/kubeless/templates/zk-svc.yaml
+++ b/incubator/kubeless/templates/zk-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-zookeeper
+  name: zookeeper
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -11,5 +11,5 @@ spec:
     name: client
   selector:
     kubeless: zookeeper
-    app: {{ template "fullname"  . }}
+    app: {{ template "name"  . }}
     release: {{ .Release.Name | quote }}
