--- a/incubator/nfs-client-provisioner/templates/deployment.yaml
+++ b/incubator/nfs-client-provisioner/templates/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "nfs-client-provisioner.fullname" . }}
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "nfs-client-provisioner.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "name" . }}
+        app: {{ template "nfs-client-provisioner.name" . }}
         release: {{ .Release.Name }}
     spec:
       volumes:
