Set a single source for Artifactory and Nginx images version

--- a/stable/artifactory/values.yaml
+++ b/stable/artifactory/values.yaml
@@ -55,7 +55,7 @@ artifactory:
   image:
     # repository: "docker.bintray.io/jfrog/artifactory-oss"
     repository: "docker.bintray.io/jfrog/artifactory-pro"
-    version: 5.6.3
+    version:
     pullPolicy: IfNotPresent
   service:
     name: artifactory
@@ -98,7 +98,6 @@ nginx:
   replicaCount: 1
   image:
     repository: "docker.bintray.io/jfrog/nginx-artifactory-pro"
-    version: 5.6.3
     pullPolicy: IfNotPresent
   service:
     ## For minikube, set this to NodePort, elsewhere use LoadBalancer
