[incubator/elasticsearch] Optionally expose http
Declares a value for exposing port 9200 for master and data pods and
sets it to `false`. This allows for downstream users to open
elasticsearch http port for monitoring or other purposes. We use datadog for our
monitoring and the agent pod expects port 9200 to be open so that it can
get and send metrics at the container level.

--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -37,6 +37,7 @@ client:
 
 master:
   name: master
+  exposeHttp: false
   replicas: 3
   heapSize: "512m"
   persistence:
@@ -60,6 +61,7 @@ master:
 
 data:
   name: data
+  exposeHttp: false
   replicas: 2
   heapSize: "1536m"
   persistence:
